fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ html,
   margin: 0;
   padding: 0;
   background-color: black;
-  overflow: hidden;
+  overflow: clip;
 }
 
 /* #root * {
